fix: опечатки и подсветка

--- a/docs/std/std643.md
+++ b/docs/std/std643.md
@@ -184,13 +184,13 @@ https://its.1c.ru/db/v8std#content:643
 
     === "Неправильно"
 
-        ```bsl title="Рассчитывать дату каждый раз"
+        ```bsl title="Рассчитывать дату каждый раз" hl_lines="2"
         ДатаПоследнегоОповещения = ТекущаяДатаСеанса();
         ДатаСледующегоОповещения = РассчитатьДату() + ТекущаяДатаСеанса();
         ```
     === "Правильно"
 
-        ```bsl title="Использовать ранее рассчитанную дату"
+        ```bsl title="Использовать ранее рассчитанную дату" hl_lines="2"
         ДатаПоследнегоОповещения = ТекущаяДатаСеанса();
         ДатаСледующегоОповещения = РассчитатьДату() + ДатаПоследнегоОповещения;
         ```
