--- a/docs/std/std678.md
+++ b/docs/std/std678.md
@@ -4,7 +4,7 @@ https://its.1c.ru/db/v8std#content:678
 
 ###### 1.
 
-Злоумышленние может вызвать серверный код с клиента. Например, он может выполнять запросы по HTTP, пытаясь повторить поведение клиента платформы. Своими действиями злоумышленник не должен получить несанкционированный доступ к данным пользователей или нарушить работоспособносить сервера.
+Злоумышленник может вызвать серверный код с клиента. Например, он может выполнять запросы по HTTP, пытаясь повторить поведение клиента платформы. Своими действиями злоумышленник не должен получить несанкционированный доступ к данным пользователей или нарушить работоспособносить сервера.
 
 ###### 1.1.
 
